test/corpus/basic.txt
=================
version statement
=================
\version "2.24.0"

---

(lilypond
  (version_statement
    (version_number)))

=================
line comment
=================
% this is a comment

---

(lilypond
  (comment
    (line_comment)))

=================
block comment
=================
%{ this is a block comment %}

---

(lilypond
  (comment
    (block_comment)))

=================
unsigned number
=================
\paper { indent = 0 }

---

(lilypond
  (paper_block
    (assignment
      (assignment_id
        (symbol))
      (number_expression
        (number_term
          (number_factor
            (bare_number
              (unsigned))))))))

=================
real number
=================
\paper { indent = 2.5 }

---

(lilypond
  (paper_block
    (assignment
      (assignment_id
        (symbol))
      (number_expression
        (number_term
          (number_factor
            (bare_number
              (real))))))))

=================
fraction
=================
\paper { indent = 3/4 }

---

(lilypond
  (paper_block
    (assignment
      (assignment_id
        (symbol))
      (number_expression
        (number_term
          (number_factor
            (bare_number
              (fraction))))))))

=================
negative number
=================
\paper { indent = -5 }

---

(lilypond
  (paper_block
    (assignment
      (assignment_id
        (symbol))
      (number_expression
        (number_term
          (number_factor
            (number_factor
              (bare_number
                (unsigned)))))))))

=================
number expression addition
=================
\paper { x = 2 + 3 }

---

(lilypond
  (paper_block
    (assignment
      (assignment_id
        (symbol))
      (number_expression
        (number_expression
          (number_term
            (number_factor
              (bare_number
                (unsigned)))))
        (number_term
          (number_factor
            (bare_number
              (unsigned))))))))

=================
number expression multiplication
=================
\paper { x = 2 * 3 }

---

(lilypond
  (paper_block
    (assignment
      (assignment_id
        (symbol))
      (number_expression
        (number_term
          (number_term
            (number_factor
              (bare_number
                (unsigned))))
          (number_factor
            (bare_number
              (unsigned))))))))

=================
number expression precedence
=================
\paper { x = 2 + 3 * 4 }

---

(lilypond
  (paper_block
    (assignment
      (assignment_id
        (symbol))
      (number_expression
        (number_expression
          (number_term
            (number_factor
              (bare_number
                (unsigned)))))
        (number_term
          (number_term
            (number_factor
              (bare_number
                (unsigned))))
          (number_factor
            (bare_number
              (unsigned))))))))

=================
string with escapes
=================
\header { title = "Hello \"World\"" }

---

(lilypond
  (header_block
    (assignment
      (assignment_id
        (symbol))
      (string))))

=================
empty header
=================
\header { }

---

(lilypond
  (header_block))

=================
empty score
=================
\score { }

---

(lilypond
  (score_block))

=================
layout block
=================
\layout {
  indent = 0
}

---

(lilypond
  (layout_block
    (assignment
      (assignment_id
        (symbol))
      (number_expression
        (number_term
          (number_factor
            (bare_number
              (unsigned))))))))

=================
midi block
=================
\midi {
  tempo = 120
}

---

(lilypond
  (midi_block
    (assignment
      (assignment_id
        (symbol))
      (number_expression
        (number_term
          (number_factor
            (bare_number
              (unsigned))))))))

=================
scheme boolean true
=================
\header { x = ##t }

---

(lilypond
  (header_block
    (assignment
      (assignment_id
        (symbol))
      (embedded_scm
        (scheme_boolean)))))

=================
scheme boolean false
=================
\header { x = ##f }

---

(lilypond
  (header_block
    (assignment
      (assignment_id
        (symbol))
      (embedded_scm
        (scheme_boolean)))))

=================
scheme number
=================
\header { x = #42 }

---

(lilypond
  (header_block
    (assignment
      (assignment_id
        (symbol))
      (embedded_scm
        (scheme_number
          (unsigned))))))
