test/corpus/book.txt
=================
header book multi
=================
\version "2.16.0"

\header {
  texidoc = "A header block."
}

\book {
  \header {
    title = "Title incorrect"
    subtitle = "Subtitle incorrect"
    composer = "Composer correct"
    piece = "Piece incorrect"
  }
  % This should replace title without affecting other fields
  \header {
    title = "Title correct"
  }
}

---
(lilypond
  (version_statement (version_number))
  (header_block
    (assignment (assignment_id (symbol)) (string)))
  (book_block
    (header_block
      (assignment (assignment_id (symbol)) (string))
      (assignment (assignment_id (symbol)) (string))
      (assignment (assignment_id (symbol)) (string))
      (assignment (assignment_id (symbol)) (string)))
    (comment (line_comment))
    (header_block
      (assignment (assignment_id (symbol)) (string)))))

=================
book with score
=================
\book {
  \score {
    \header {
      piece = "Movement I"
    }
    \layout { }
    \midi { }
  }
}

---
(lilypond
  (book_block
    (score_block
      (header_block
        (assignment (assignment_id (symbol)) (string)))
      (layout_block)
      (midi_block))))

=================
book with paper
=================
\book {
  \paper {
    indent = 0
  }
}

---
(lilypond
  (book_block
    (paper_block
      (assignment
        (assignment_id (symbol))
        (number_expression
          (number_term
            (number_factor
              (bare_number (unsigned)))))))))

=================
bookpart
=================
\bookpart {
  \header {
    subtitle = "Part I"
  }
  \score {
    \layout { }
  }
}

---
(lilypond
  (bookpart_block
    (header_block
      (assignment (assignment_id (symbol)) (string)))
    (score_block
      (layout_block))))
